# capstone

./: LICENSE  installation.md  readme.md
armor_detector/: CMakeLists.txt  package.xml
armor_detector/include/armor_detector/: armor.hpp  armor_detector.hpp  armor_detector_node.hpp  number_classifier.hpp  pnp_solver.hpp
armor_detector/src/: armor_detector.cpp  armor_detector_node.cpp  number_classifier.cpp  pnp_solver.cpp
armor_tracker/: package.xml
armor_tracker/include/armor_tracker/: armor_tracker.hpp  armor_tracker_node.hpp  extended_kalman_filter.hpp  line_tracker.hpp
armor_tracker/src/: armor_tracker.cpp  armor_tracker_node.cpp  extended_kalman_filter.cpp  line_tracker.cpp
auto_aim_interfaces/: CMakeLists.txt  package.xml
auto_aim_interfaces/msg/: Armor.msg  Armors.msg  Cvmode.msg  EkfDebug.msg  GimbalCommand.msg  NewTarget.msg  Target.msg  TrackerInfo.msg
new_armor_detector/: CMakeLists.txt  README.md  package.xml
new_armor_detector/include/new_armor_detector/: armor_detector.hpp  new_armor_detector_node.hpp  number_classifier.hpp  pnp_solver.hpp  stamp.hpp  thread_pool.hpp
new_armor_detector/src/: armor_detector.cpp  new_armor_detector_node.cpp  number_classifier.cpp  pnp_solver.cpp
new_armor_tracker/: CMakeLists.txt  README.md  package.xml
new_armor_tracker/include/new_armor_tracker/: new_armor_tracker_node.hpp
new_armor_tracker/include/new_armor_tracker/garage/: IRobot.hpp  car.hpp  garage.hpp  tower.hpp
new_armor_tracker/include/new_armor_tracker/kalman/filter/: ekf.h  kf.h  ukf.h
new_armor_tracker/include/new_armor_tracker/kalman/interface/: antitopV3.h  outpostV2.h  trackqueueV3.h  trackqueueV4.h
new_armor_tracker/include/new_armor_tracker/utils/: slidestd.hpp  slideweighted.hpp  tf.hpp  timer.hpp
new_armor_tracker/src/: new_armor_tracker_node.cpp
new_armor_tracker/src/garage/: car.cpp  garage.cpp  tower.cpp
new_armor_tracker/src/kalman/: antitopV3.cpp  outpostV2.cpp  trackqueueV3.cpp  trackqueueV4.cpp
rm_auto_aim/: CMakeLists.txt
